--- a/Contacts/Base.lproj/Main.storyboard
+++ b/Contacts/Base.lproj/Main.storyboard
@@ -1,24 +1,195 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="l0c-vB-15Q">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Contacts-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Contacts" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="pMn-w2-cHQ">
+                                <rect key="frame" x="0.0" y="88" width="414" height="774"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" textLabel="oaK-R6-J2u" style="IBUITableViewCellStyleDefault" id="GpF-hN-RCU">
+                                        <rect key="frame" x="0.0" y="24.5" width="414" height="43.5"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="GpF-hN-RCU" id="Pv4-zn-HEW">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="oaK-R6-J2u">
+                                                    <rect key="frame" x="20" y="0.0" width="374" height="43.5"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="0.0"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="cTe-m3-5Fs"/>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="g5G-xJ-e9k"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="pMn-w2-cHQ" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="7gO-15-9Cz"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="pMn-w2-cHQ" secondAttribute="bottom" id="Its-bX-LE5"/>
+                            <constraint firstItem="pMn-w2-cHQ" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="XGg-ql-EG9"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="pMn-w2-cHQ" secondAttribute="trailing" id="nTJ-1j-SmM"/>
+                        </constraints>
                     </view>
+                    <navigationItem key="navigationItem" title="Contacts" id="DEP-Pn-2th">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="3Jh-zM-bct">
+                            <connections>
+                                <segue destination="lre-Nr-veR" kind="show" id="Hbp-23-qwI"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="833" y="88"/>
+        </scene>
+        <!--New contact-->
+        <scene sceneID="QTO-0q-2K8">
+            <objects>
+                <viewController id="lre-Nr-veR" customClass="FormVC" customModule="Contacts" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="ThN-fB-zJ8">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QLW-sd-RDq">
+                                <rect key="frame" x="20" y="108" width="374" height="24"/>
+                                <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="20"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="line" placeholder="Иван" adjustsFontForContentSizeCategory="YES" minimumFontSize="16" translatesAutoresizingMaskIntoConstraints="NO" id="xs4-TY-QpG">
+                                <rect key="frame" x="20" y="142" width="374" height="29"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                <textInputTraits key="textInputTraits"/>
+                                <connections>
+                                    <action selector="fiedName:" destination="2xl-Nd-MMq" eventType="editingDidEnd" id="Rxr-Aq-Hj8"/>
+                                </connections>
+                            </textField>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Surname" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QhS-Sg-bEF">
+                                <rect key="frame" x="20" y="191" width="374" height="24"/>
+                                <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="20"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="line" placeholder="Иванов" adjustsFontForContentSizeCategory="YES" minimumFontSize="16" translatesAutoresizingMaskIntoConstraints="NO" id="cXB-ZG-7kC">
+                                <rect key="frame" x="20" y="225" width="374" height="29"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Age" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1aU-MA-PAC">
+                                <rect key="frame" x="20" y="274" width="374" height="24"/>
+                                <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="20"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="line" placeholder="Иванов" adjustsFontForContentSizeCategory="YES" minimumFontSize="16" translatesAutoresizingMaskIntoConstraints="NO" id="zzg-fp-fu9">
+                                <rect key="frame" x="20" y="308" width="374" height="29"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nZx-qO-Vcw">
+                                <rect key="frame" x="150" y="377" width="114" height="41"/>
+                                <color key="backgroundColor" systemColor="systemGreenColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="24"/>
+                                <state key="normal" title="SAVE">
+                                    <color key="titleColor" systemColor="systemGray6Color"/>
+                                </state>
+                                <connections>
+                                    <action selector="saveAction:" destination="lre-Nr-veR" eventType="touchUpInside" id="vwP-Ir-EhR"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="bn2-oR-SEd"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="QhS-Sg-bEF" firstAttribute="leading" secondItem="bn2-oR-SEd" secondAttribute="leading" constant="20" id="6rT-Mg-29l"/>
+                            <constraint firstItem="cXB-ZG-7kC" firstAttribute="leading" secondItem="bn2-oR-SEd" secondAttribute="leading" constant="20" id="A3Z-Ws-Ve1"/>
+                            <constraint firstItem="zzg-fp-fu9" firstAttribute="leading" secondItem="bn2-oR-SEd" secondAttribute="leading" constant="20" id="AE0-oI-nS2"/>
+                            <constraint firstItem="1aU-MA-PAC" firstAttribute="leading" secondItem="bn2-oR-SEd" secondAttribute="leading" constant="20" id="D1Y-Ng-MDb"/>
+                            <constraint firstItem="cXB-ZG-7kC" firstAttribute="top" secondItem="QhS-Sg-bEF" secondAttribute="bottom" constant="10" id="F1f-Ng-ABb"/>
+                            <constraint firstItem="bn2-oR-SEd" firstAttribute="trailing" secondItem="1aU-MA-PAC" secondAttribute="trailing" constant="20" id="FC9-rK-q6Y"/>
+                            <constraint firstItem="zzg-fp-fu9" firstAttribute="top" secondItem="1aU-MA-PAC" secondAttribute="bottom" constant="10" id="Jk5-FX-4uc"/>
+                            <constraint firstItem="bn2-oR-SEd" firstAttribute="trailing" secondItem="cXB-ZG-7kC" secondAttribute="trailing" constant="20" id="Od1-rp-QWa"/>
+                            <constraint firstItem="xs4-TY-QpG" firstAttribute="top" secondItem="QLW-sd-RDq" secondAttribute="bottom" constant="10" id="Q6a-k7-VIH"/>
+                            <constraint firstItem="QhS-Sg-bEF" firstAttribute="top" secondItem="xs4-TY-QpG" secondAttribute="bottom" constant="20" id="QSR-rV-VAC"/>
+                            <constraint firstItem="bn2-oR-SEd" firstAttribute="trailing" secondItem="QhS-Sg-bEF" secondAttribute="trailing" constant="20" id="RiE-uL-mhY"/>
+                            <constraint firstItem="bn2-oR-SEd" firstAttribute="trailing" secondItem="zzg-fp-fu9" secondAttribute="trailing" constant="20" id="TvK-1g-Dlu"/>
+                            <constraint firstItem="bn2-oR-SEd" firstAttribute="trailing" secondItem="xs4-TY-QpG" secondAttribute="trailing" constant="20" id="Usi-PX-yuA"/>
+                            <constraint firstItem="bn2-oR-SEd" firstAttribute="trailing" secondItem="nZx-qO-Vcw" secondAttribute="trailing" constant="150" id="Wsv-oe-ACH"/>
+                            <constraint firstItem="nZx-qO-Vcw" firstAttribute="leading" secondItem="bn2-oR-SEd" secondAttribute="leading" constant="150" id="cGr-vE-5pq"/>
+                            <constraint firstItem="bn2-oR-SEd" firstAttribute="trailing" secondItem="QLW-sd-RDq" secondAttribute="trailing" constant="20" id="jlu-wt-10Z"/>
+                            <constraint firstItem="QLW-sd-RDq" firstAttribute="top" secondItem="bn2-oR-SEd" secondAttribute="top" constant="20" id="ldK-Ft-MM2"/>
+                            <constraint firstItem="zzg-fp-fu9" firstAttribute="top" secondItem="1aU-MA-PAC" secondAttribute="bottom" constant="10" id="m1J-VE-wdg"/>
+                            <constraint firstItem="1aU-MA-PAC" firstAttribute="top" secondItem="cXB-ZG-7kC" secondAttribute="bottom" constant="20" id="pWl-ml-fuY"/>
+                            <constraint firstItem="zzg-fp-fu9" firstAttribute="top" secondItem="1aU-MA-PAC" secondAttribute="bottom" constant="10" id="pXd-hm-Fjn"/>
+                            <constraint firstItem="cXB-ZG-7kC" firstAttribute="top" secondItem="QhS-Sg-bEF" secondAttribute="bottom" constant="10" id="pdv-pd-5Kf"/>
+                            <constraint firstItem="nZx-qO-Vcw" firstAttribute="top" secondItem="zzg-fp-fu9" secondAttribute="bottom" constant="40" id="wjb-WP-3oN"/>
+                            <constraint firstItem="QLW-sd-RDq" firstAttribute="leading" secondItem="bn2-oR-SEd" secondAttribute="leading" constant="20" id="wxC-o2-Uth"/>
+                            <constraint firstItem="xs4-TY-QpG" firstAttribute="leading" secondItem="bn2-oR-SEd" secondAttribute="leading" constant="20" id="xCc-9H-sVS"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" title="New contact" id="75p-Gh-W7s"/>
+                    <connections>
+                        <outlet property="ageField" destination="zzg-fp-fu9" id="0yz-bO-tGI"/>
+                        <outlet property="nameFiled" destination="xs4-TY-QpG" id="Vej-36-Dqn"/>
+                        <outlet property="surNameField" destination="cXB-ZG-7kC" id="ZaF-zL-Ggg"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="xqf-hK-FMr" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <exit id="2xl-Nd-MMq" userLabel="Exit" sceneMemberID="exit"/>
+            </objects>
+            <point key="canvasLocation" x="1531.8840579710145" y="87.723214285714278"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="Lip-8X-jSN">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="l0c-vB-15Q" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="6hX-IF-M93">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="f7v-ud-hv4"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="siI-EH-xh5" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="131.8840579710145" y="88.392857142857139"/>
         </scene>
     </scenes>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemGray6Color">
+            <color red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemGreenColor">
+            <color red="0.20392156862745098" green="0.7803921568627451" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+    </resources>
 </document>
